Start Time text field tweaks.

--- a/iOS_Aura/Base.lproj/Schedules.storyboard
+++ b/iOS_Aura/Base.lproj/Schedules.storyboard
@@ -231,7 +231,7 @@
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="optional" textAlignment="natural" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="FXk-65-8r6">
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="required" textAlignment="natural" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="FXk-65-8r6">
                                                 <rect key="frame" x="100" y="0.0" width="480" height="30"/>
                                                 <gestureRecognizers/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -256,7 +256,7 @@
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sI0-Dq-29A">
                                                 <rect key="frame" x="16" y="8" width="548" height="64"/>
-                                                <string key="text">The date the schedule takes effect and the time each day when the schedule fires. 'At Start' actions fire and 'In Range' actions start at this time.</string>
+                                                <string key="text">The date the schedule takes effect and the time each day when the schedule fires. 'At Start' actions fire and 'In Range' actions start at this time.  Start Time is mandatory.</string>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
