--- a/iOS_Aura/Base.lproj/Main.storyboard
+++ b/iOS_Aura/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="m9m-D0-krJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="m9m-D0-krJ">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -534,58 +534,67 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zam-6s-Med" customClass="AuraButton" customModule="Aura" customModuleProvider="target">
-                                <rect key="frame" x="20" y="175" width="560" height="30"/>
+                                <rect key="frame" x="20" y="168" width="560" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="qz3-Yu-pPH"/>
+                                </constraints>
                                 <state key="normal" title="Check OTA info from cloud"/>
                                 <connections>
                                     <action selector="checkOTAInfoFromCloudAction:" destination="b20-iO-edL" eventType="touchUpInside" id="l1u-3u-C0B"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="waG-dG-dta" customClass="AuraButton" customModule="Aura" customModuleProvider="target">
-                                <rect key="frame" x="20" y="225" width="560" height="30"/>
+                                <rect key="frame" x="20" y="219" width="560" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="k5L-5g-nsw"/>
+                                </constraints>
                                 <state key="normal" title="Download OTA image from cloud"/>
                                 <connections>
                                     <action selector="downloadOTAImageAction:" destination="b20-iO-edL" eventType="touchUpInside" id="9O6-d4-FXX"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eft-xn-3J7" customClass="AuraButton" customModule="Aura" customModuleProvider="target">
-                                <rect key="frame" x="20" y="275" width="560" height="30"/>
+                                <rect key="frame" x="20" y="270" width="560" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="UD6-5z-GBp"/>
+                                </constraints>
                                 <state key="normal" title="Push OTA image to device"/>
                                 <connections>
                                     <action selector="pushImageToDeviceAction:" destination="b20-iO-edL" eventType="touchUpInside" id="DtY-AX-PXL"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="device DSN" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kgO-xd-lkg">
-                                <rect key="frame" x="20" y="72" width="560" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
-                            </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="LAN IP" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2jE-do-B5A">
-                                <rect key="frame" x="20" y="110" width="560" height="30"/>
+                                <rect key="frame" x="20" y="118" width="560" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="decimalPad"/>
                             </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6cT-Kc-uhI">
-                                <rect key="frame" x="20" y="313" width="560" height="230"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6cT-Kc-uhI" customClass="AuraConsoleTextView" customModule="Aura" customModuleProvider="target">
+                                <rect key="frame" x="20" y="317" width="560" height="222"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Target Device DSN" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kgO-xd-lkg">
+                                <rect key="frame" x="20" y="80" width="560" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" autocorrectionType="no" spellCheckingType="no"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Eft-xn-3J7" firstAttribute="top" secondItem="waG-dG-dta" secondAttribute="bottom" constant="20" id="6CT-QN-ycT"/>
+                            <constraint firstItem="Eft-xn-3J7" firstAttribute="top" secondItem="waG-dG-dta" secondAttribute="bottom" constant="16" id="6CT-QN-ycT"/>
                             <constraint firstItem="2jE-do-B5A" firstAttribute="leading" secondItem="2KV-w0-imd" secondAttribute="leadingMargin" id="98Z-pz-287"/>
                             <constraint firstItem="Eft-xn-3J7" firstAttribute="leading" secondItem="2KV-w0-imd" secondAttribute="leadingMargin" id="9pZ-Og-aYx"/>
-                            <constraint firstItem="zam-6s-Med" firstAttribute="top" secondItem="2jE-do-B5A" secondAttribute="bottom" constant="35" id="HKo-CR-9NE"/>
+                            <constraint firstItem="zam-6s-Med" firstAttribute="top" secondItem="2jE-do-B5A" secondAttribute="bottom" constant="20" id="HKo-CR-9NE"/>
                             <constraint firstItem="zam-6s-Med" firstAttribute="leading" secondItem="2KV-w0-imd" secondAttribute="leadingMargin" id="IMe-xQ-YDs"/>
                             <constraint firstItem="waG-dG-dta" firstAttribute="leading" secondItem="2KV-w0-imd" secondAttribute="leadingMargin" id="M1p-8D-7iW"/>
                             <constraint firstItem="kgO-xd-lkg" firstAttribute="leading" secondItem="2KV-w0-imd" secondAttribute="leadingMargin" id="P22-AB-FAH"/>
-                            <constraint firstItem="6cT-Kc-uhI" firstAttribute="top" secondItem="Eft-xn-3J7" secondAttribute="bottom" constant="8" symbolic="YES" id="SIF-0m-VGw"/>
+                            <constraint firstItem="6cT-Kc-uhI" firstAttribute="top" secondItem="Eft-xn-3J7" secondAttribute="bottom" constant="12" id="SIF-0m-VGw"/>
                             <constraint firstAttribute="trailingMargin" secondItem="kgO-xd-lkg" secondAttribute="trailing" id="T6z-g4-0cY"/>
-                            <constraint firstItem="waG-dG-dta" firstAttribute="top" secondItem="zam-6s-Med" secondAttribute="bottom" constant="20" id="UGW-RX-S82"/>
-                            <constraint firstItem="kgO-xd-lkg" firstAttribute="top" secondItem="0BJ-aw-9ho" secondAttribute="bottom" constant="8" id="b7u-wE-Qkc"/>
+                            <constraint firstItem="waG-dG-dta" firstAttribute="top" secondItem="zam-6s-Med" secondAttribute="bottom" constant="16" id="UGW-RX-S82"/>
+                            <constraint firstItem="kgO-xd-lkg" firstAttribute="top" secondItem="0BJ-aw-9ho" secondAttribute="bottom" constant="16" id="b7u-wE-Qkc"/>
                             <constraint firstItem="waG-dG-dta" firstAttribute="trailing" secondItem="2KV-w0-imd" secondAttribute="trailingMargin" id="drf-FT-yXF"/>
-                            <constraint firstItem="ypw-50-7wh" firstAttribute="top" secondItem="6cT-Kc-uhI" secondAttribute="bottom" constant="8" symbolic="YES" id="gWq-qZ-0tw"/>
+                            <constraint firstItem="ypw-50-7wh" firstAttribute="top" secondItem="6cT-Kc-uhI" secondAttribute="bottom" constant="12" id="gWq-qZ-0tw"/>
                             <constraint firstAttribute="trailingMargin" secondItem="2jE-do-B5A" secondAttribute="trailing" id="mza-wY-U0U"/>
                             <constraint firstItem="6cT-Kc-uhI" firstAttribute="trailing" secondItem="Eft-xn-3J7" secondAttribute="trailing" id="p7F-au-O4Y"/>
                             <constraint firstItem="Eft-xn-3J7" firstAttribute="trailing" secondItem="2KV-w0-imd" secondAttribute="trailingMargin" id="pZN-lj-K7X"/>
@@ -595,7 +604,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="descriptionView" destination="6cT-Kc-uhI" id="87u-fg-KgP"/>
+                        <outlet property="consoleView" destination="6cT-Kc-uhI" id="fBT-JL-AbO"/>
                         <outlet property="dsnField" destination="kgO-xd-lkg" id="fD3-kI-4lr"/>
                         <outlet property="lanIPField" destination="2jE-do-B5A" id="NmX-ns-kad"/>
                     </connections>
@@ -1405,7 +1414,7 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="e8J-vI-mlD">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="e8J-vI-mlD" customClass="AuraConsoleTextView" customModule="Aura" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="390" width="600" height="146"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -2027,7 +2036,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Registration" id="a1s-3D-XDR"/>
                     <connections>
-                        <outlet property="logTextView" destination="e8J-vI-mlD" id="GO4-D3-hgC"/>
+                        <outlet property="logTextView" destination="e8J-vI-mlD" id="5ki-Dc-q04"/>
                         <outlet property="tableView" destination="v6F-VP-zMg" id="93V-XP-BSQ"/>
                         <segue destination="taZ-Jj-hZm" kind="show" identifier="toNodeRegistrationPage" id="MhH-af-KAQ"/>
                     </connections>
@@ -2048,7 +2057,7 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="o4Y-iX-ZgZ">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="o4Y-iX-ZgZ" customClass="AuraConsoleTextView" customModule="Aura" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="390" width="600" height="146"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -2144,7 +2153,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Node Registration" id="Nu7-4r-JQI"/>
                     <connections>
-                        <outlet property="logTextView" destination="o4Y-iX-ZgZ" id="U3z-Mc-0dX"/>
+                        <outlet property="logTextView" destination="o4Y-iX-ZgZ" id="gof-wR-bMP"/>
                         <outlet property="tableView" destination="paN-H5-k8e" id="ev2-6D-p2w"/>
                     </connections>
                 </viewController>
